Fix -Wdeprecated-copy warnings in WTF and JavaScriptCore <https://webkit.org/b/217855> <rdar://problem/67716914>

Reviewed by Darin Adler.

Source/JavaScriptCore:

* assembler/ARM64Assembler.h:
(JSC::ARM64Assembler::LinkRecord::LinkRecord): Add.
- Implement the copy constructor since the compiler may not
  have implemented it the same way as the copy assignment
  operator.
(JSC::ARM64Assembler::LinkRecord::operator=):
- Fix return type of copy assignment operator and simplify it.

Source/WTF:

* wtf/Identified.h:
(WTF::IdentifiedBase::Identifier):
- Change to default since compiler will generate the same code.
(WTF::IdentifiedBase::operator=): Add.
- Add default copy assignment operator to keep it protected.


Canonical link: https://commits.webkit.org/230615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268657 268f45cc-cd09-0410-ab3c-d52691b4dbfc